--- a/composer.json
+++ b/composer.json
@@ -9,14 +9,18 @@
         "laravel/framework": "5.3.*",
 		"laravelcollective/html": "5.3.*",
 		"cartalyst/sentinel": "2.0.*",
-		"maatwebsite/excel": "~2.1.0"
+		"maatwebsite/excel": "~2.1.0",
+		"ellipsesynergie/api-response":"^0.12.3",
+		"guzzlehttp/guzzle": "~6.0"
+		
     },
     "require-dev": {
-        "fzaninotto/faker": "~1.4",
+
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~5.0",
         "symfony/css-selector": "3.1.*",
-        "symfony/dom-crawler": "3.1.*"
+        "symfony/dom-crawler": "3.1.*",
+		"fzaninotto/faker": "v1.4.0"
     },
     "autoload": {
         "classmap": [
